# scene-synthesis

./: .ruff.toml  CITATION.cff  README.md  pyproject.toml  test.py  test_interpolation.py
.github/workflows/: orga-ci.yml
scripts/: fly-by.py  instantiate_scene.py
src/scene_synthesis/: __init__.py  directivities.py  microphones.py  scene.py  sources.py
tests/: cases_environment.py  cases_microphone.py  cases_source.py  cases_trajectory.py  conftest.py  test_fly-around.py  test_fly_around.py  test_fly_by.py  test_plausibility.py
