[project]
name = "scene-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Art Pelling", email = "a.pelling@tu-berlin.de" }
]
requires-python = ">=3.13"
dependencies = [
    "acoular",
    "matplotlib>=3.10.7",
    "pyqt6>=6.10.0",
]

[project.scripts]
scene-synthesis = "scene_synthesis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
acoular = { git = "https://github.com/acoular/acoular", rev = "7688f91672c04fb390ab9d979f0961cb7283a2ab" }
